--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,12 +1,12 @@
 apply plugin: 'com.android.library'
 
 android {
-  compileSdkVersion 23
+  compileSdkVersion 31
   buildToolsVersion "23.0.1"
 
   defaultConfig {
     minSdkVersion 16
-    targetSdkVersion 22
+    targetSdkVersion 31
     versionCode 1
     versionName "1.0"
     ndk {
@@ -26,6 +26,6 @@ repositories {
 dependencies {
   compile 'com.facebook.react:react-native:+'
   // api files('libs/open_sdk_r8353806_lite.jar')
-  api files('libs/open_sdk_3.5.4.11_r3f56456_lite.jar')
+  api files('libs/open_sdk_3.5.13.83_rc564928_lite.jar')
 }
 
