--- a/android/build.gradle
+++ b/android/build.gradle
@@ -24,7 +24,7 @@ repositories {
 }
 
 dependencies {
-  compile 'com.facebook.react:react-native:+'
+  implementation 'com.facebook.react:react-native:+'
   // api files('libs/open_sdk_r8353806_lite.jar')
   api files('libs/open_sdk_3.5.13.83_rc564928_lite.jar')
 }
