--- a/android/build.gradle
+++ b/android/build.gradle
@@ -21,11 +21,11 @@ repositories {
         // All of React Native (JS, Obj-C sources, Android binaries) is installed from npm
         url "$rootDir/../node_modules/react-native/android"
     }
+    jcenter()
 }
 
 dependencies {
   implementation 'com.facebook.react:react-native:+'
-  // api files('libs/open_sdk_r8353806_lite.jar')
-  api files('libs/open_sdk_3.5.13.83_rc564928_lite.jar')
+  implementation 'com.tencent.tauth:qqopensdk:3.5.13.1'
 }
 
